FastBuildSimpleExecutable sample fixes/improvements - Convert to vs2019 - Use sharpmake's fastbuild executable - Add sources to the vcxproj (should be default!) - Add a cout when the exe is run

--- a/samples/FastBuildSimpleExecutable/reference/projects/fastbuildsimpleexecutable_vs2019_win64.vcxproj
+++ b/samples/FastBuildSimpleExecutable/reference/projects/fastbuildsimpleexecutable_vs2019_win64.vcxproj
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="16.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
       <Configuration>Debug</Configuration>
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{9788AA47-A790-D970-753D-A04FF02699F6}</ProjectGuid>
+    <ProjectGuid>{B4CE3300-E079-DBD7-8FC9-DF8F3F96F776}</ProjectGuid>
     <DefaultLanguage>en-US</DefaultLanguage>
     <RootNamespace>FastBuildSimpleExecutable</RootNamespace>
     <ProjectName>FastBuildSimpleExecutable</ProjectName>
@@ -22,14 +22,14 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>false</WholeProgramOptimization>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Makefile</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>false</WholeProgramOptimization>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -42,9 +42,9 @@
     <OutDir>output\win64\debug\</OutDir>
     <IntDir>obj\win64\debug\</IntDir>
     <NMakeBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)tools\FastBuild\Windows-x64\FBuild.exe FastBuildSimpleExecutable_Debug_win64 -ide -summary -config $(SolutionName).bff </NMakeBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" FastBuildSimpleExecutable_Debug_win64 -ide -summary -config $(SolutionName).bff </NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)tools\FastBuild\Windows-x64\FBuild.exe -clean FastBuildSimpleExecutable_Debug_win64 -ide -summary -config $(SolutionName).bff </NMakeReBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" -clean FastBuildSimpleExecutable_Debug_win64 -ide -summary -config $(SolutionName).bff </NMakeReBuildCommandLine>
     <NMakeCleanCommandLine>del "obj\win64\debug\*unity*.cpp" >NUL 2>NUL
 del "obj\win64\debug\*.obj" >NUL 2>NUL
 del "obj\win64\debug\*.a" >NUL 2>NUL
@@ -63,9 +63,9 @@ del "output\win64\debug\fastbuildsimpleexecutable.pdb" >NUL 2>NUL</NMakeCleanCom
     <OutDir>output\win64\release\</OutDir>
     <IntDir>obj\win64\release\</IntDir>
     <NMakeBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)tools\FastBuild\Windows-x64\FBuild.exe FastBuildSimpleExecutable_Release_win64 -ide -summary -config $(SolutionName).bff </NMakeBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" FastBuildSimpleExecutable_Release_win64 -ide -summary -config $(SolutionName).bff </NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)tools\FastBuild\Windows-x64\FBuild.exe -clean FastBuildSimpleExecutable_Release_win64 -ide -summary -config $(SolutionName).bff </NMakeReBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" -clean FastBuildSimpleExecutable_Release_win64 -ide -summary -config $(SolutionName).bff </NMakeReBuildCommandLine>
     <NMakeCleanCommandLine>del "obj\win64\release\*unity*.cpp" >NUL 2>NUL
 del "obj\win64\release\*.obj" >NUL 2>NUL
 del "obj\win64\release\*.a" >NUL 2>NUL
@@ -81,7 +81,12 @@ del "output\win64\release\fastbuildsimpleexecutable.pdb" >NUL 2>NUL</NMakeCleanC
     <TargetFileName>fastbuildsimpleexecutable.exe</TargetFileName>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="fastbuildsimpleexecutable_vs2017_win64.bff" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\codebase\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="fastbuildsimpleexecutable_vs2019_win64.bff" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
