--- a/samples/CPPCLI/reference/projects/OtherCSharpProj.vs2017.v4_6_2.csproj
+++ b/samples/CPPCLI/reference/projects/OtherCSharpProj.vs2017.v4_6_2.csproj
@@ -17,8 +17,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>output\win32\debug</OutputPath>
-    <IntermediateOutputPath>temp\vs2017\v4_6_2\noblob_msbuild_vs2017_v4_6_2_debug_dll_win32</IntermediateOutputPath>
+    <OutputPath>output\vs2017\v4_6_2\debug</OutputPath>
+    <IntermediateOutputPath>temp\othercsharpproj\vs2017\v4_6_2\debug</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE;WIN32</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -29,8 +29,8 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>output\win32\release</OutputPath>
-    <IntermediateOutputPath>temp\vs2017\v4_6_2\noblob_msbuild_vs2017_v4_6_2_release_dll_win32</IntermediateOutputPath>
+    <OutputPath>output\vs2017\v4_6_2\release</OutputPath>
+    <IntermediateOutputPath>temp\othercsharpproj\vs2017\v4_6_2\release</IntermediateOutputPath>
     <DefineConstants>TRACE;WIN32</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
