--- a/samples/CPPCLI/reference/projects/TestCSharpConsole.vs2017.v4_6_2.csproj
+++ b/samples/CPPCLI/reference/projects/TestCSharpConsole.vs2017.v4_6_2.csproj
@@ -17,8 +17,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>output\win32\debug</OutputPath>
-    <IntermediateOutputPath>temp\vs2017\v4_6_2\noblob_msbuild_vs2017_v4_6_2_debug_dll_win32</IntermediateOutputPath>
+    <OutputPath>output\vs2017\v4_6_2\debug</OutputPath>
+    <IntermediateOutputPath>temp\testcsharpconsole\vs2017\v4_6_2\debug</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE;WIN32</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -29,8 +29,8 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>output\win32\release</OutputPath>
-    <IntermediateOutputPath>temp\vs2017\v4_6_2\noblob_msbuild_vs2017_v4_6_2_release_dll_win32</IntermediateOutputPath>
+    <OutputPath>output\vs2017\v4_6_2\release</OutputPath>
+    <IntermediateOutputPath>temp\testcsharpconsole\vs2017\v4_6_2\release</IntermediateOutputPath>
     <DefineConstants>TRACE;WIN32</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -45,8 +45,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="clrcppproj.vs2017.win32.v4_6_2.vcxproj">
-      <Project>{4c39e4cb-12df-351e-6eca-91bb2e73a1d8}</Project>
+    <ProjectReference Include="clrcppproj.vs2017.v4_6_2.vcxproj">
+      <Project>{c0644b52-bb9c-2014-b639-85c0c52355de}</Project>
       <Name>CLRCPPProj</Name>
     </ProjectReference>
   </ItemGroup>
