--- a/samples/CPPCLI/reference/projects/TestCSharpConsole.vs2019.v4_7_2.csproj
+++ b/samples/CPPCLI/reference/projects/TestCSharpConsole.vs2019.v4_7_2.csproj
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="16.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <PlatformTarget Condition=" '$(Platform)' == '' ">x86</PlatformTarget>
-    <ProjectGuid>{BB6CDD07-FF5B-E66A-8544-15BB64C0C76B}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{1CC6264B-284A-CC77-18FC-6FCF78DC9E4E}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OtherCSharpProj</RootNamespace>
-    <AssemblyName>OtherCSharpProj</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <RootNamespace>TestCSharpConsole</RootNamespace>
+    <AssemblyName>TestCSharpConsole</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
@@ -17,8 +17,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>output\win32\debug</OutputPath>
-    <IntermediateOutputPath>temp\vs2015\v4_6_2\noblob_msbuild_vs2015_v4_6_2_debug_dll_win32</IntermediateOutputPath>
+    <OutputPath>output\vs2019\v4_7_2\debug</OutputPath>
+    <IntermediateOutputPath>temp\testcsharpconsole\vs2019\v4_7_2\debug</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE;WIN32</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -29,20 +29,26 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>output\win32\release</OutputPath>
-    <IntermediateOutputPath>temp\vs2015\v4_6_2\noblob_msbuild_vs2015_v4_6_2_release_dll_win32</IntermediateOutputPath>
+    <OutputPath>output\vs2019\v4_7_2\release</OutputPath>
+    <IntermediateOutputPath>temp\testcsharpconsole\vs2019\v4_7_2\release</IntermediateOutputPath>
     <DefineConstants>TRACE;WIN32</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\codebase\OtherCSharpProj\Class1.cs">
-      <Link>Class1.cs</Link>
+    <Compile Include="..\codebase\TestCSharpConsole\Program.cs">
+      <Link>Program.cs</Link>
     </Compile>
-    <Compile Include="..\codebase\OtherCSharpProj\Properties\AssemblyInfo.cs">
+    <Compile Include="..\codebase\TestCSharpConsole\Properties\AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="clrcppproj.vs2019.v4_7_2.vcxproj">
+      <Project>{3eb6f23b-6af0-875b-6f8e-d1449d6b0280}</Project>
+      <Name>CLRCPPProj</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
