--- a/samples/CSharpImports/reference/projects/csharpimports/CSharpImports.vs2019.v4_7_2.csproj
+++ b/samples/CSharpImports/reference/projects/csharpimports/CSharpImports.vs2019.v4_7_2.csproj
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="PRE CSharpImports-CSharpImports.vs2017.v4_6_1" Condition="PRE condition" />
+<Project ToolsVersion="16.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\..\CSharpImports-pre.props" Condition="'$(Configuration)' == 'Debug'" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <PlatformTarget Condition=" '$(Platform)' == '' ">AnyCPU</PlatformTarget>
-    <ProjectGuid>{E47E7993-7099-7123-3585-ECD8CF39DA6A}</ProjectGuid>
+    <ProjectGuid>{B5C3E9AD-72C3-C739-6FF9-A08615FBA6C0}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CSharpImports</RootNamespace>
     <AssemblyName>the other name</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -45,6 +45,6 @@
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
   </ItemGroup>
-  <Import Project="POST CSharpImports-CSharpImports.vs2017.v4_6_1" Condition="POST condition" />
+  <Import Project="..\..\CSharpImports-post.props" Condition="'$(Configuration)' == 'Release'" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
