HelloQTSample fixes/improvements - Read the Qt5_Dir environment variable if it's there - Log Qt5_Dir value - Remove vs2015 unused ref - Fix compilation   * add main.cpp   * fix exec.qrc by making it a real qrc and not a rc...   * add a blank.png file to be consumed as resource   * disable pch on rcc output cpp file, can't be used since it lacks its include   * set output to exe   * add required libs to linker   * disable exception from MS headers   * set a more recent winSdk - Update refs

--- a/samples/QTFileCustomBuild/reference/projects/qtfilecustombuild_vs2017_win64.vcxproj.filters
+++ b/samples/QTFileCustomBuild/reference/projects/qtfilecustombuild_vs2017_win64.vcxproj.filters
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ClCompile Include="..\codebase\floatanglespinbox.cpp" />
     <ClCompile Include="..\codebase\floatcosanglespinbox.cpp" />
+    <ClCompile Include="..\codebase\main.cpp" />
     <ClCompile Include="..\codebase\privatewidget.cpp" />
     <ClCompile Include="..\codebase\stdafx.cpp" />
     <ClCompile Include="obj\win64\qt\debug\moc_floatanglespinbox.cpp">
